--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/leocamelo/bk-charts.git"
+  },
+  "license": "MIT",
   "scripts": {
     "start": "node main.js"
   },
   "dependencies": {
-    "d3": "^5.16.0",
-    "jsdom": "^16.2.2",
+    "d3": "^6.5.0",
+    "jsdom": "^16.4.0",
     "svg2png": "^4.1.1"
   }
 }
